Refactor NeedleSearchEngine to correctly count keyword matches per file and fix result reporting scope